# c-_scaffold

./: CMakeLists.txt  README.md  main.cpp
doc/: README.md
src/: CMakeLists.txt  file2.cpp
